--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,8 @@ The approval rating variable will be measured by taking multiple sources (to ens
 A pattern that would disprove is if there was no positive correlation on average across the 24-month period.
 
 
+
+
 ```{r}
 library(readr)
 library(tidyverse)
@@ -40,18 +42,42 @@ SP <- rename(SP, Month = Date)
 
 result <- inner_join(pres, SP, by = "Month")
 
+
 plot <- ggplot(data = result, aes(x = Price, y = Approving)) +
-  geom_smooth() +
+  geom_point() + 
+  geom_smooth(se = FALSE) + 
   labs(
     title = "Obama Approval Ratings vs S&P 500",
     x = "S&P 500",
-    y = "Approval %"
-  )
+    y = "Approval %",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  theme_minimal() + 
+  scale_color_discrete(name = "Year/Term")
 
 plot
+ggsave("approval_vs_sp500.png")
 
-ggsave("approval_vs_sp500.png") 
+result <- result |>
+  mutate(`Change %` = as.numeric(gsub("%", "", `Change %`)))
+
+
+plot2 <- ggplot(data = result, aes(x = `Change %`, y = `Approval Change`)) +
+  geom_point(size = 2, color = "black", alpha = 0.7) + 
+  geom_smooth(method = "lm", se = FALSE, color = "blue", size = 1) +
+  labs(
+    title = "Approval Change vs. S&P 500 Change %",
+    x = "S&P 500 Change (%)",
+    y = "Approval Change",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  theme_minimal(base_size = 14)
+
+plot2
+ggsave("netApproval_vs_netsp500.png")
+ 
 
 ```
 
 ![Correlation Between S&P 500 Price and Approval Ratings](approval_vs_sp500.png)
+The two graphs strongly suggest that there is no correlation between Presidential Approval Rating and the price of S&P 500, at least under the Obama administration. I felt the Obama administration was a good choice to see if there was a correlation as there was the 2009 Reccession and the 2010 and 2014 midterms where the Republicans had gains in the Senate, House and gubernatorial elections. The graph that compares the net changes of the S&P and Approval ratings indicates there is no relationship between the variables. The secomd graph is the best indicator of an absence of a relationship as in this graph we are comparing the net changes in the same month and there is still no clear relationship between variables. A way to improve on this study would be to take data from other Presidents in the past and compare. But it could be inferred that at least in the first half of 2010s there is no clear relationship between Presidential Approval ratings and the S&P 500.
