--- a/index.Rmd
+++ b/index.Rmd
@@ -71,26 +71,41 @@ resultTotal
 
 
 # Net Approval vs S&P 500 for all
-plot2 <- ggplot(data = resultTotal, aes(x = `Change %`, y = `Change`)) +
-  geom_point(size = 2, color = "black", alpha = 0.7) + 
-  geom_smooth(method = "lm", se = FALSE, color = "blue", size = 1) +
+plotAll <- ggplot(data = resultTotal, aes(x = `Change %`, y = `Change`)) +
+  geom_point(size = 3, color = "black", alpha = 0.8) + 
+  geom_smooth(method = "lm", se = TRUE, color = "blue", size = 1, linetype = "dashed") +
   labs(
-    title = "Approval Change vs. S&P 500 Change %",
+    title = "Approval Change vs. S&P 500 Change (%)",
     x = "S&P 500 Change (%)",
     y = "Approval Change",
     caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
   ) +
-  theme_minimal(base_size = 14)
+  scale_color_viridis_c() +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid.major = element_line(color = "gray80"),
+    panel.grid.minor = element_line(color = "gray90"),
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 1)
+  )
 
 
-plot2
+plotAll
 
 
 
 all <- lm(Change ~ `Change %`, data = resultTotal)
 summary(all)
 
+```
 
+
+
+
+
+
+```{r}
 # Democrats
 
 SPDems <- bind_rows(SPObama, SPClinton, SPCarter)
@@ -99,6 +114,29 @@ resultDems <- inner_join(presApproval, SPDems, by = "Date")
 
 resultDems <- resultDems |>
   mutate(`Change %` = as.numeric(gsub("%", "", `Change %`)))
+
+#Graph
+plotDems <- ggplot(data = resultDems, aes(x = `Change %`, y = `Change`)) +
+  geom_point(size = 3, color = "black", alpha = 0.8) + 
+  geom_smooth(method = "lm", se = TRUE, color = "blue", size = 1, linetype = "dashed") +
+  labs(
+    title = "Approval Change vs. S&P 500 Change (%) [Democrat Incumbent]",
+    x = "S&P 500 Change (%)",
+    y = "Approval Change",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  scale_color_viridis_c() +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid.major = element_line(color = "gray80"),
+    panel.grid.minor = element_line(color = "gray90"),
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 1)
+  )
+
+
+plotDems
 
 dems <- lm(Change ~ `Change %`, data = resultDems)
 summary(dems)
@@ -113,10 +151,37 @@ resultRep <- inner_join(presApproval, SPRep, by = "Date")
 resultRep <- resultRep |>
   mutate(`Change %` = as.numeric(gsub("%", "", `Change %`)))
 
+#Graph
+plotRep <- ggplot(data = resultRep, aes(x = `Change %`, y = `Change`)) +
+  geom_point(size = 3, color = "black", alpha = 0.8) + 
+  geom_smooth(method = "lm", se = TRUE, color = "blue", size = 1, linetype = "dashed") +
+  labs(
+    title = "Approval Change vs. S&P 500 Change (%) [Republican Incumbent]",
+    x = "S&P 500 Change (%)",
+    y = "Approval Change",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  scale_color_viridis_c() +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid.major = element_line(color = "gray80"),
+    panel.grid.minor = element_line(color = "gray90"),
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 1)
+  )
+
+
+plotRep
+
 reps <- lm(Change ~ `Change %`, data = resultRep)
 summary(reps)
 
 
+```
+
+
+```{r}
 # Election Result = Win
 
 SPWin <- bind_rows(SPObama, SPBush1, SPClinton)
@@ -125,6 +190,29 @@ resultWin <- inner_join(presApproval, SPWin, by = "Date")
 
 resultWin <- resultWin |>
   mutate(`Change %` = as.numeric(gsub("%", "", `Change %`)))
+
+#Graph
+plotWin <- ggplot(data = resultWin, aes(x = `Change %`, y = `Change`)) +
+  geom_point(size = 3, color = "black", alpha = 0.8) + 
+  geom_smooth(method = "lm", se = TRUE, color = "blue", size = 1, linetype = "dashed") +
+  labs(
+    title = "Approval Change vs. S&P 500 Change (%) [Won Re-election]",
+    x = "S&P 500 Change (%)",
+    y = "Approval Change",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  scale_color_viridis_c() +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid.major = element_line(color = "gray80"),
+    panel.grid.minor = element_line(color = "gray90"),
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 1)
+  )
+
+
+plotWin
 
 win <- lm(Change ~ `Change %`, data = resultWin)
 summary(win)
@@ -138,6 +226,29 @@ resultLoss <- inner_join(presApproval, SPLoss, by = "Date")
 
 resultLoss <- resultLoss |>
   mutate(`Change %` = as.numeric(gsub("%", "", `Change %`)))
+
+#Graph
+plotLoss <- ggplot(data = resultLoss, aes(x = `Change %`, y = `Change`)) +
+  geom_point(size = 3, color = "black", alpha = 0.8) + 
+  geom_smooth(method = "lm", se = TRUE, color = "blue", size = 1, linetype = "dashed") +
+  labs(
+    title = "Approval Change vs. S&P 500 Change (%) [Lost Re-election]",
+    x = "S&P 500 Change (%)",
+    y = "Approval Change",
+    caption = "Data Sources: American Presidency Project (Approval Ratings), S&P 500"
+  ) +
+  scale_color_viridis_c() +
+  theme_minimal(base_size = 14) +
+  theme(
+    panel.grid.major = element_line(color = "gray80"),
+    panel.grid.minor = element_line(color = "gray90"),
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5),
+    plot.caption = element_text(hjust = 1)
+  )
+
+
+plotLoss
 
 
 loss <- lm(Change ~ `Change %`, data = resultLoss)
