--- a/index.Rmd
+++ b/index.Rmd
@@ -12,12 +12,12 @@ output:
 ## Project thoughts
 
 My research question for the Final Project is: How are the approval ratings of incumbent U.S. presidents running for the second term related to the stock market performance during their first term? My hypothesis is that higher stock market growth results in higher approval ratings going into a re-election. 
-The hypothesis may be true as economic performance is a big talking point during elections and it makes sense that the voting public would be more receptive to the second term of a President that has shown economic growth. In this case, the variables of interest are the performance of the S&P 500 index, which is usually used to measure and gauge the development of the U.S. economy, and the approval ratings of an incumbent President going into re-election taken from the Roper Center. 
+The hypothesis may be true as economic performance is a big talking point during elections and it makes sense that the voting public would be more receptive to the second term of a President that has shown economic growth. In this case, the variables of interest are the performance of the S&P 500 index, which is usually used to measure and gauge the development of the U.S. economy, and the approval ratings of an incumbent President going into re-election taken from the Roper Center.
+
+
 The approval rating variable will be measured by taking multiple sources (to ensure the overall representation is as accurate as possible) and will be compared to the S&P based on monthly changes in the index and approval ratings between the midterm and presidential elections (24 months). A pattern in the data that would prove my hypothesis is if positive and negative changes in the S&P translate to approval ratings and since the data will be measured over 2 years, it can account for before an incumbent declares that they are running again. 
 A pattern that would disprove is if there was no positive correlation on average across the 24-month period.
 
-
-The two graphs strongly suggest that there is no correlation between Presidential Approval Rating and the price of S&P 500, at least under the Obama administration. I felt the Obama administration was a good choice to see if there was a correlation as there was the 2009 Recession and the 2010 and 2014 midterms where the Republicans had gains in the Senate, House and gubernatorial elections. The graph that compares the net changes of the S&P and Approval ratings indicates there is no relationship between the variables. The secod graph is the best indicator of an absence of a relationship as in this graph we are comparing the net changes in the same month and there is still no clear relationship between variables. A way to improve on this study would be to take data from other Presidents in the past and compare. But it could be inferred that at least in the first half of 2010s there is no clear relationship between Presidential Approval ratings and the S&P 500.
 
 
 
@@ -87,7 +87,6 @@ plotAll <- ggplot(data = resultTotal, aes(x = `Change %`, y = `Change`)) +
     plot.subtitle = element_text(hjust = 0.5),
     plot.caption = element_text(hjust = 1)
   )
-
 ```
 
 
@@ -187,9 +186,6 @@ plotRep <- ggplot(data = resultRep, aes(x = `Change %`, y = `Change`)) +
     plot.subtitle = element_text(hjust = 0.5),
     plot.caption = element_text(hjust = 1)
   )
-
-
-
 ```
 
 ```{r plot-rep, echo=FALSE, fig.width=8, fig.height=6, fig.align='center'}
@@ -241,13 +237,32 @@ plotWin <- ggplot(data = resultWin, aes(x = `Change %`, y = `Change`)) +
     plot.caption = element_text(hjust = 1)
   )
 
+```
 
-plotWin
+```{r plot-win, echo=FALSE, fig.width=8, fig.height=6, fig.align='center'}
+print(plotWin)
+```
 
+
+```{r}
 win <- lm(Change ~ `Change %`, data = resultWin)
-summary(win)
+
+modelsummary::modelsummary(
+  reps,
+  statistic = c("Standard Error. = {std.error}", 
+                "p-value = {p.value}"),
+  gof_map = c("nobs", "r.squared", "adj.r.squared"),
+  coef_rename = c("(Intercept)" = "Approval Change")
+)
+```
 
 
+
+
+
+
+
+```{r}
 # Election Result = Loss
 
 SPLoss <- bind_rows(SPBush2, SPCarter)
@@ -276,13 +291,21 @@ plotLoss <- ggplot(data = resultLoss, aes(x = `Change %`, y = `Change`)) +
     plot.subtitle = element_text(hjust = 0.5),
     plot.caption = element_text(hjust = 1)
   )
+```
 
+```{r plot-loss, echo=FALSE, fig.width=8, fig.height=6, fig.align='center'}
+print(plotLoss)
+```
 
-plotLoss
-
-
+```{r}
 loss <- lm(Change ~ `Change %`, data = resultLoss)
-summary(loss)
 
+modelsummary::modelsummary(
+  reps,
+  statistic = c("Standard Error. = {std.error}", 
+                "p-value = {p.value}"),
+  gof_map = c("nobs", "r.squared", "adj.r.squared"),
+  coef_rename = c("(Intercept)" = "Approval Change")
+)
 ```
 
